--- a/assets/css/elements.css
+++ b/assets/css/elements.css
@@ -50,3 +50,32 @@ h6 {
 p {
     margin-bottom: 3rem;
 }
+
+.responsive-table {
+    overflow: hidden;
+    overflow-x: scroll;
+}
+
+table {
+    width: 100%;
+    min-width: 360px;
+    border-collapse: collapse;
+}
+
+table caption {
+    font-style: italic;
+    font-size: 1.6rem;
+    text-align: left;
+    margin-bottom: 1rem;
+}
+
+table td, table th {
+    white-space: nowrap;
+    text-align: left;
+    padding: 0.5rem;
+    border: 0.1rem solid var(--light-gray-color);
+}
+
+table tfoot td, table th{
+    background: var(--light-gray-color);
+}
