--- a/assets/css/classes.css
+++ b/assets/css/classes.css
@@ -1,8 +1,8 @@
 .main-bg {
-    background-image: url('../img/main-bg.svg');
-    background-size: cover;
-    background-position: center center;
-    color: var(--white-color);
+  background-image: url('../img/main-bg.svg');
+  background-size: cover;
+  background-position: center center;
+  color: var(--white-color);
 }
 
 .white-bg {
@@ -11,11 +11,13 @@
 }
 
 .main-content {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 10rem var(--gap);
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 10rem var(--gap);
 }
 
+
 .section {
-    height: 100vh;
+  min-height: 100vh;
 }
+
