--- a/assets/css/top-three.css
+++ b/assets/css/top-three.css
@@ -4,6 +4,6 @@
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
 }
